--- a/index.html
+++ b/index.html
@@ -104,6 +104,13 @@
               >
             </button>
           </li>
+          <li>
+            <button>
+              <a class="btn2" href="Formulaire.html"
+                ><span class="spn2">Formulaire</span></a
+              >
+            </button>
+          </li>
         </ul>
       </nav>
       <div class="header-social">
