Mise à jour de la structure du site et des chemins d'accès
Cette mise à jour apporte des améliorations significatives à la structure du site et à l'organisation des fichiers. Les modifications incluent :
Déplacement du fichier index.html : Le fichier index.html a été déplacé à la racine du projet pour faciliter l'accès et améliorer l'expérience utilisateur.
Mise à jour des chemins d'accès : Tous les chemins vers les fichiers CSS et les images ont été mis à jour pour refléter la nouvelle structure, garantissant ainsi que les ressources sont correctement chargées.
Liens entre les pages : Les liens vers les autres pages ont été ajustés pour pointer vers les bons emplacements, assurant une navigation fluide à travers le site.
Cette version vise à améliorer la convivialité et l'optimisation SEO du site.

--- a/pages/Contact.html
+++ b/pages/Contact.html
@@ -4,13 +4,14 @@
   <head>
     <title>KAKAKORP Esports. Rejoignez dès maintenant l'équipe !</title>
     <link
-      href="image/KaKaKorp-transparent.ico"
+      href="../assets/images/KaKaKorp-transparent.ico"
       rel="shortcut icon"
       type="image/x-icon"
     />
-    <link href="image/KaKaKorp-transparent.ico" rel="icon" />
+    <link href="../assets/images/KaKaKorp-transparent.ico" rel="icon" />
     <meta charset="utf-8" />
-    <link href="combined_style.css" rel="stylesheet" />
+    <link href="../assets/css/combined_style.css" rel="stylesheet" />
+    <link href="../assets/css/main.css" rel="stylesheet" />
     <meta
       content="KAKAKORP Esports, une équipe eSport dynamique et talentueuse, fondée en 2023, se distingue par son sens de l'humour unique et ses compétences exceptionnelles dans des jeux comme Valorant et Counter Strike."
       name="description"
@@ -25,7 +26,7 @@
     />
     <meta content="website" property="og:type" />
     <meta content="https://kakakorp.site" property="og:url" />
-    <meta content="image/KaKaKorp-transparent.png" property="og:image" />
+    <meta content="../assets/images/KaKaKorp-transparent.png" property="og:image" />
     <meta
       content="Découvrez KAKAKORP Esports, une équipe eSport fondée en 2023, connue pour son talent exceptionnel et son esprit d'équipe unique dans des jeux compétitifs comme Valorant et Counter Strike."
       property="og:description"
@@ -65,7 +66,7 @@
             alt="Logo de KAKAKORP Esports"
             height="200"
             loading="lazy"
-            src="image/KaKaKorp-t_5.gif"
+            src="../assets/images/KaKaKorp-t_5.gif"
             width="300"
           />
         </a>
@@ -82,7 +83,7 @@
         <ul class="center">
           <li>
             <button>
-              <a class="btn2" href="index.html"
+              <a class="btn2" href="../index.html"
                 ><span class="spn2">ACCUEIL</span></a
               >
             </button>
